--- a/style.css
+++ b/style.css
@@ -9,19 +9,29 @@ body {
     font-family: 'Courier New', Courier, monospace;
     border: 0;
     margin: 0px;
+    background-image: ;
 }
-
+/*
 * {
     border: 1px;
     border-color: black;
     border-style:solid
 }
-/**/
+*/
 .header, .footer {
     background-color: rgb(42, 69,130);
 }
 
+button {
+    color:aquamarine;
+    background-color: rgb(63, 104, 195);
+    font-weight: 500;
+    border-radius: 4px;
+    font-size: 20px;
+    padding: 4px;
+    flex: 0 0 auto;
 
+}
 .header {
     display: flex;
     flex-direction: column;
@@ -43,13 +53,19 @@ body {
 }
 
 .top-links li {
-    padding: 8px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 4px;
     margin: 4px;
+    font-weight: 700;
 }
 
 .intro {
     display: flex;
     justify-content: center;
+    padding-left: 100px;
+    padding-right: 100px;
 }
 
 .title-card {
@@ -61,8 +77,9 @@ body {
 }
 
 .intro img {
-    height: auto;
+    height: 200px;
     width: 300px;
+    object-fit: cover;
     border-radius: 8px;
     flex: 0 1 auto;
     margin: 12px;
@@ -73,13 +90,20 @@ body {
     flex-direction: column;
     flex: 1 1 auto;
 }
+
+.content h2 {
+    text-align: center
+}
 .slideshow {
     display: flex;
     list-style: none;
     padding: none;
     justify-content: center;
     margin-block: 0;
+    padding-inline-start: 0px;
+    margin-bottom: 64px;
 }
+
 .card {
     display: flex;
     flex-direction: column;
@@ -108,18 +132,62 @@ body {
     text-align: center;
     border-radius: 12px;
     padding:4px;
+    font-size: 11px;
 }
 
 .banner {
     display: flex;
     height: 150px;
     background-color: rgba(63, 104, 195, 0.5);
+    justify-content: center;
+    align-items: center;
+}
+
+.quote {
+    color: rgb(42, 69,130);
+    font-style: italic;
+    font-size: 32px;
+}
+
+.quotee {
+    color: aquamarine;
+    font-style: italic;
+    font-size: 18px;
+    text-align: right;
 }
 
 .bottom {
     display: flex;
     flex: 1 1 0;
     height: 100%;
+}
+.recruit {
+    height: 150px;
+    display: flex;
+    margin: 100px 100px;
+    align-items: center;
+    padding: 24px;
+    background-color: rgb(42, 69,130);
+    color: white;
+    text-shadow: 4px;
+    border-radius: 8px;
+}
+
+.recruit div {
+    font-style: italic;
+
+}
+
+.recruit div a {
+    text-decoration: none;
+    color: aquamarine;
+    font-weight: 500;
+}
+
+.recruit button {
+    width:auto;
+    height: 48px;
+    margin: 20px;
 }
 
 .footer {
