--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body {
     font-family: 'Courier New', Courier, monospace;
     border: 0;
     margin: 0px;
-    background-image: ;
+    background-image: url(./sources/waterfall.jpeg);
 }
 /*
 * {
@@ -22,16 +22,23 @@ body {
     background-color: rgb(42, 69,130);
 }
 
-button {
+button, button a {
     color:aquamarine;
     background-color: rgb(63, 104, 195);
     font-weight: 500;
-    border-radius: 4px;
+    border-radius: 8px;
     font-size: 20px;
     padding: 4px;
     flex: 0 0 auto;
-
+    text-decoration: none;
 }
+.header .logo {
+    flex: 0 0 auto;
+    height: 56px;
+    width: auto;
+    margin: 12px 24px;
+}
+
 .header {
     display: flex;
     flex-direction: column;
@@ -68,6 +75,10 @@ button {
     padding-right: 100px;
 }
 
+.title-card h1 {
+    margin: 0;
+}
+
 .title-card {
     display: flex;
     flex-direction: column;
@@ -92,8 +103,20 @@ button {
 }
 
 .content h2 {
-    text-align: center
+    text-align: center;
+    background-color: rgb(42, 69,130);
+    color: aquamarine;
+    border-radius: 12px;
+    width: fit-content;
+    padding: 12px;
+
 }
+.h2-container {
+    display: flex;
+    justify-content: center;
+    height: fit-content;
+}
+
 .slideshow {
     display: flex;
     list-style: none;
@@ -127,7 +150,7 @@ button {
 .img-description {
     font-style: italic;
     color: white;
-    background-color: rgba(42, 68, 130, 0.5);
+    background-color: rgba(42, 68, 130);
     margin: 4px;
     text-align: center;
     border-radius: 12px;
@@ -138,7 +161,7 @@ button {
 .banner {
     display: flex;
     height: 150px;
-    background-color: rgba(63, 104, 195, 0.5);
+    background-color: rgba(63, 104, 195);
     justify-content: center;
     align-items: center;
 }
